fix: fixing logo and logo title on mobile ui

--- a/apps/platform-app/src/components/landing-page/LandingFooter/LandingFooter.module.scss
+++ b/apps/platform-app/src/components/landing-page/LandingFooter/LandingFooter.module.scss
@@ -6,10 +6,15 @@
   padding-right: 20px;
   @include mobile {
     padding-left: 50px;
-    padding-right: 50px;
+    // padding-right: 50px;
     padding-bottom: 50px;
     gap: 26px;
   }
+  // @include smallMobile {
+  //   padding-left: 20px;
+  //   padding-right: 20px;
+  //   gap: 20px;
+  // }
 }
 
 .wrapper {
@@ -27,11 +32,17 @@
     align-items: flex-start;
     gap: 34px;
   }
+  // @include smallMobile {
+  //   flex-direction: column;
+  //   align-items: flex-start;
+  //   gap: 20px;
+  // }
 }
 
 .bottomBar {
   margin-top: 60px;
   @include mobile {
+    // flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
 }
@@ -39,13 +50,23 @@
 .contact,
 .terms {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 40px;
+  // @include smallMobile {
+  //   flex-direction: column;
+  //   align-items: center;
+  //   gap: 20px;
+  // }
 }
 
 .terms {
   @include mobile {
     gap: 30px;
   }
+  // @include smallMobile {
+  //   gap: 15px;
+  // }
 }
 
 .textDark {
